--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;600");
 
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
   margin: 0;
@@ -42,9 +44,9 @@ button{
   margin-top: 10px;
   cursor: pointer;
 }
-#btn-cross {
+#btn-crossout {
   height: 30px;
-  width: 80px;
+  width: 50px;
   background-color: #00cf3e;
   color: white;
   font-size: 1.00rem;
